Change to typescript of hero component.

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,11 +2,11 @@
 import Quote from "./Quote.astro";
 import Features from "./Features.astro";
 
-export interface Props {
-    bgImg: string,
-	heading: string,
-    tagline: string,
-}
+// export interface Props {
+//     bgImg: string,
+// 	heading: string,
+//     tagline: string,
+// }
 
 const {bgImg, heading, tagline} = Astro.props;
 ---
