--- a/src/pages/tyre-services/24-hour-emergency-tyre-fitting.astro
+++ b/src/pages/tyre-services/24-hour-emergency-tyre-fitting.astro
@@ -5,7 +5,7 @@ import Intro from '../../components/Intro.astro';
 const title = "24 Hour Emergency Tyre Fitting"
 const heading = "24 Hour Tyre Service"
 const tagline = "Stuck With A Flat Tyre? Call Us Today"
-const mainHeading = "24Hr Tyre Service In Mansfield"
+const mainHeading = "24Hr Tyre Mobile Service"
 ---
 
 <Layout title={`${title} | Tyre Nation Ltd`}>
