Change to features, navbar and index img

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -1,5 +1,5 @@
 <div class="d-none d-lg-block mt-3">
-    <p class="mb-1"><i class="bi bi-check-circle"></i> Free Mobile Service</p>
-    <p class="mb-1"><i class="bi bi-check-circle"></i> Same Day Appointments</p>
-    <p class="mb-1"><i class="bi bi-check-circle"></i> Open 7 Days a Week</p>
+    <p class="mb-1"><i class="bi bi-clock me-2"></i> Same Day Fitting Available</p>
+    <p class="mb-1"><i class="bi bi-calendar-check me-2"></i> Open 7 Days a Week</p>
+    <p class="mb-1"><i class="bi bi-map me-2"></i> We Cover Newark & Sherwood</p>
 </div>
