--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -40,10 +40,10 @@
       </div> -->
     </div>
   </nav>
-
+<!-- 
 <script>
     const navItems = document.querySelectorAll(".nav-link");
     for (let item of navItems) {
         item.classList.add("text-white");
     }
-</script>
+</script> -->
