change to branding

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row text-light g-lg-5 text-center text-lg-start">
                 <div class="col-lg-3">
-                    <a href="/" class="navbar-brand fw-bold fs-2 text-light">TYRE<span class="text-warning">NATION</span></a>
-                    <p class="mb-lg-5">Tyre Nation Ltd is a 24 hour mobile tyre fitting service based in Ollerton, Newark.</p>
+                    <a href="/" class="navbar-brand fw-bold fs-2 text-light">MOBILE<span class="text-danger">TYRES</span></a>
+                    <p class="mb-lg-5">Newark Mobile Tyres is a 24 hour mobile tyre fitting service based in Ollerton, Newark.</p>
                     <!-- <p class="mb-0 text-muted">Tel: 01623 434432</p>
                     <p>Email: contact@tyrenation.co.uk</p> -->
                     <i class="fa-brands fa-cc-visa fs-1"></i>
@@ -27,16 +27,16 @@
                         <li><a href="/other-services/alloygator-rim-protectors/">AlloyGator Rim Protectors</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-3">
+                <!-- <div class="col-lg-3">
                     <h5>Need Help?</h5>
                     <p class="fs-4 fw-bold">Call 01623 434432</p>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
     <div class="bg-dark text-muted py-2">
         <div class="container d-flex justify-content-center small">
-            <p class="my-0">&copy; 2023 Tyre Nation Ltd</p>
+            <p class="my-0">&copy; 2023 Newark Mobile Tyres</p>
             <span class="mx-4">|</span>
             <a href="/privacy-policy/">Privacy Policy</a>
             <span class="mx-4">|</span>
@@ -56,7 +56,7 @@
         cursor: pointer;
     }
     li a:hover {
-        color: gold;
+        color: #dc3545;
     }
     a {
         color: white;
