--- a/src/components/Quote.astro
+++ b/src/components/Quote.astro
@@ -9,19 +9,19 @@
             <input type="text" class="form-control form-control-lg text-center" placeholder="Enter Reg" id="regInput" name="Registration">
         </div>
         <div class="d-grid">
-            <button class="btn btn-dark" id="regBtn">Next</button>
+            <button class="btn btn-danger" id="regBtn">Next</button>
         </div>
     </div>
     <div id="postcodeSection" class="d-none">
         <div class="mb-2">
             <input type="text" class="form-control form-control-lg text-center" placeholder="Enter Postcode" id="postcodeInput" name="Postcode">
         </div>
-        <div class="row">
+        <div class="row g-1">
             <div class="col-6 d-grid">
-                <button class="btn-light btn" id="backToRegBtn">Back</button>
+                <button class="btn-dark btn" id="backToRegBtn">Back</button>
             </div>
             <div class="col-6 d-grid">
-                <button class="btn btn-dark" id="postcodeBtn">Next</button>
+                <button class="btn btn-danger" id="postcodeBtn">Next</button>
             </div>
         </div>
     </div>
@@ -38,12 +38,12 @@
         <div class="mb-2">
             <textarea name="Message" id="message" cols="30" rows="3" class="form-control form-control-lg" placeholder="Message" required></textarea>
         </div>
-        <div class="row">
+        <div class="row g-1">
             <div class="col-6 d-grid">
-                <button class="btn-light btn" id="backToPostcodeBtn">Back</button>
+                <button class="btn-dark btn" id="backToPostcodeBtn">Back</button>
             </div>
             <div class="col-6 d-grid">
-                <button class="btn btn-dark">Submit</button>
+                <button class="btn btn-danger">Submit</button>
             </div>
         </div>
     </div>
