--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -14,7 +14,7 @@
             <textarea name="Message" id="contactMessage" cols="30" rows="10" class="form-control" placeholder="How can we help you?"></textarea>
         </div>
         <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-warning px-4">Submit</button>
+            <button type="submit" class="btn btn-danger px-4">Submit</button>
         </div>
     </div>
 </form>
