--- a/src/components/Map.astro
+++ b/src/components/Map.astro
@@ -1,3 +1,3 @@
-<div class="container">
+<!-- <div class="container">
     <iframe src="https://www.google.com/maps/d/u/0/embed?mid=17CCsN7p9IIrcfWPjLDv_JNpi5vKiD3k&ehbc=2E312F" class="w-100" height="480"></iframe>
-</div>
+</div> -->
