--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,14 +1,14 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
     <div class="container">
-      <a class="navbar-brand fw-bold fs-2" href="/">TYRE<span class="text-warning">NATION</span></a>
+      <a class="navbar-brand fw-bold fs-2" href="/">MOBILE<span class="text-danger">TYRES</span></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="/about/">About</a>
-          </li>
+          </li> -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="tyreServicesDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Tyre Services
