--- a/src/components/Topbar.astro
+++ b/src/components/Topbar.astro
@@ -1,4 +1,4 @@
-<div class="bg-warning py-1 d-none d-lg-block">
+<!-- <div class="bg-warning py-1 d-none d-lg-block">
     <div class="container">
         <div class="row">
             <div class="col">
@@ -24,4 +24,4 @@
     a:hover {
         color: black;
     }
-</style>
+</style> -->
