--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,16 +4,16 @@ import ContactForm from '../components/ContactForm.astro';
 import Map from '../components/Map.astro';
 ---
 
-<Layout title="Contact | Tyre Nation">
+<Layout title="Contact | Newark Mobile Tyres">
 	<main>
-        <div class="bg-light">
+        <div class="bg-dark text-light">
             <div class="container py-3">
                 <h1 class="py-3 text-center">Contact</h1>
             </div>
         </div>
         <div class="container">
             <div class="row py-5">
-                <div class="col-12 col-lg-6 order-2 order-lg-1">
+                <!-- <div class="col-12 col-lg-6 order-2 order-lg-1">
                     <h2 class="mb-3">Get In Touch With Us</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias repellendus voluptate architecto esse fugit repudiandae, dolore explicabo corrupti delectus mollitia! Aperiam, et quo! Vitae numquam sapiente accusantium suscipit libero vero.</p>
                     <ul>
@@ -27,10 +27,10 @@ import Map from '../components/Map.astro';
                         <li>Google</li>
                         <li>Yell</li>
                     </ul>
-                </div>
-                <div class="col-12 col-lg-6 order-1 order-lg-2">
-                    <h2 class="mb-3">Send Us a Message</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem vero expedita delectus sit asperiores natus, doloribus laudantium. Numquam, provident neque. Tempora, assumenda! Quibusdam eaque autem labore ab commodi error illum?</p>
+                </div> -->
+                <div class="offset-lg-3 col-12 col-lg-6 order-1 order-lg-2">
+                    <h2 class="mb-3 text-center">Send Us a Message</h2>
+                    <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem vero expedita delectus sit asperiores natus, doloribus laudantium. Numquam, provident neque. Tempora, assumenda! Quibusdam eaque autem labore ab commodi error illum?</p> -->
                     <ContactForm />
                 </div>
             </div>
