Rebrand, UX improvement, rename pages

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,18 +3,18 @@
         <div class="container">
             <div class="row text-light g-lg-5 text-center text-lg-start">
                 <div class="col-lg-3">
-                    <a href="/" class="navbar-brand fw-bold fs-2 text-light">MOBILE<span class="text-danger">TYRES</span></a>
-                    <p class="mb-lg-5">Newark Mobile Tyres is a 24 hour mobile tyre fitting service based in Ollerton, Newark.</p>
+                    <a href="/" class="navbar-brand fw-bold fs-2 text-light">NEWARK<span class="text-danger">TYRES</span></a>
+                    <p class="mb-lg-5">Newark Tyres is a mobile tyre service that covers the Newark and Sherwood area.</p>
                     <!-- <p class="mb-0 text-muted">Tel: 01623 434432</p>
                     <p>Email: contact@tyrenation.co.uk</p> -->
-                    <i class="fa-brands fa-cc-visa fs-1"></i>
-                    <i class="fa-brands fa-cc-mastercard fs-1"></i>
+                    <!-- <i class="fa-brands fa-cc-visa fs-1"></i>
+                    <i class="fa-brands fa-cc-mastercard fs-1"></i> -->
                 </div>
                 <div class="col-lg-3">
                     <h5>Tyre Services</h5>
                     <ul>
                         <li><a href="/tyre-services/mobile-tyre-fitting/">Mobile Tyre Fitting</a></li>
-                        <li><a href="/tyre-services/24-hour-emergency-tyre-fitting/">24 Hour Emergency Tyre Fitting</a></li>
+                        <!-- <li><a href="/tyre-services/24-hour-emergency-tyre-fitting/">24 Hour Emergency Tyre Fitting</a></li> -->
                         <li><a href="/tyre-services/mobile-caravan-tyre-fitting/">Mobile Caravan Tyre Fitting</a></li>
                         <li><a href="/tyre-services/puncture-repair/">Puncture Repair</a></li>
                     </ul>
@@ -23,7 +23,7 @@
                     <h5>Other Services</h5>
                     <ul>
                         <li><a href="/other-services/locking-wheel-nut-removal/">Locking Wheel Nut Removal</a></li>
-                        <li><a href="/other-services/tpms/">TPMS</a></li>
+                        <li><a href="/other-services/tyre-pressure-sensors/">Tyre Pressure Sensors</a></li>
                         <li><a href="/other-services/alloygator-rim-protectors/">AlloyGator Rim Protectors</a></li>
                     </ul>
                 </div>
@@ -36,7 +36,7 @@
     </div>
     <div class="bg-dark text-muted py-2">
         <div class="container d-flex justify-content-center small">
-            <p class="my-0">&copy; 2023 Newark Mobile Tyres</p>
+            <p class="my-0">&copy; 2023 Newark Tyres</p>
             <span class="mx-4">|</span>
             <a href="/privacy-policy/">Privacy Policy</a>
             <span class="mx-4">|</span>
