--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-white">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand fw-bold fs-2" href="/">MOBILE<span class="text-danger">TYRES</span></a>
+      <a class="navbar-brand fw-bold fs-2" href="/">NEWARK<span class="text-danger">TYRES</span></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -15,9 +15,9 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="tyreServicesDropdownMenuLink">
               <li><a class="dropdown-item" href="/tyre-services/mobile-tyre-fitting/">Mobile Tyre Fitting</a></li>
-              <li><a class="dropdown-item" href="/tyre-services/24-hour-emergency-tyre-fitting/">24 Hour Emergency Tyre Fitting</a></li>
-              <li><a class="dropdown-item" href="/tyre-services/mobile-caravan-tyre-fitting/">Mobile Caravan Tyre Fitting</a></li>
+              <!-- <li><a class="dropdown-item" href="/tyre-services/24-hour-emergency-tyre-fitting/">24 Hour Emergency Tyre Fitting</a></li> -->
               <li><a class="dropdown-item" href="/tyre-services/puncture-repair/">Puncture Repair</a></li>
+              <li><a class="dropdown-item" href="/tyre-services/mobile-caravan-tyre-fitting/">Mobile Caravan Tyre Fitting</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -26,7 +26,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="otherServicesDropdownMenuLink">
                 <li><a class="dropdown-item" href="/other-services/locking-wheel-nut-removal/">Locking Wheel Nut Removal</a></li>
-                <li><a href="/other-services/tpms" class="dropdown-item">TPMS</a></li>
+                <li><a href="/other-services/tyre-pressure-sensors" class="dropdown-item">Tyre Pressure Sensors</a></li>
                 <li><a href="/other-services/alloygator-rim-protectors" class="dropdown-item">AlloyGator Rim Protectors</a></li>
               </ul>
           </li>
