--- a/src/components/Quote.astro
+++ b/src/components/Quote.astro
@@ -1,6 +1,7 @@
 <form action="https://formsubmit.co/spicerdean@icloud.com" method="post" class="bg-white p-4 border shadow-lg rounded-3">
     <h3 class="text-center mb-3">Get Quote</h3>
     <!-- <input type="hidden" name="_next" value="https://tyrenation.co.uk/thank-you"> -->
+    <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_template" value="box">
     <input type="hidden" name="_subject" value="Quote Submission | Tyre Nation">
     <input type="hidden" name="_autoresponse" value="Thank you for getting in touch with us for a quote. You will receive an email or phone call very soon from one of our team.">
@@ -9,7 +10,7 @@
             <input type="text" class="form-control form-control-lg text-center" placeholder="Enter Reg" id="regInput" name="Registration">
         </div>
         <div class="d-grid">
-            <button class="btn btn-danger" id="regBtn">Next</button>
+            <button class="btn btn-danger btn-lg" id="regBtn">Next</button>
         </div>
     </div>
     <div id="postcodeSection" class="d-none">
@@ -18,32 +19,32 @@
         </div>
         <div class="row g-1">
             <div class="col-6 d-grid">
-                <button class="btn-dark btn" id="backToRegBtn">Back</button>
+                <button class="btn-dark btn btn-lg" id="backToRegBtn">Back</button>
             </div>
             <div class="col-6 d-grid">
-                <button class="btn btn-danger" id="postcodeBtn">Next</button>
+                <button class="btn btn-danger btn-lg" id="postcodeBtn">Next</button>
             </div>
         </div>
     </div>
     <div id="contactSection" class="d-none">
         <div class="mb-2">
-            <input type="text" class="form-control form-control-lg" placeholder="Name" required name="Name">
+            <input type="text" class="form-control form-control-lg" placeholder="Name" required name="Name" id="nameInput">
         </div>
         <div class="mb-2">
-            <input type="tel" class="form-control form-control-lg" placeholder="Tel" required name="Phone">
+            <input type="tel" class="form-control form-control-lg" placeholder="Tel" required name="Phone" id="telInput">
         </div>
         <div class="mb-2">
-            <input type="email" class="form-control form-control-lg" placeholder="E-Mail" required name="Email">
+            <input type="email" class="form-control form-control-lg" placeholder="E-Mail" required name="Email" id="emailInput">
         </div>
         <div class="mb-2">
-            <textarea name="Message" id="message" cols="30" rows="3" class="form-control form-control-lg" placeholder="Message" required></textarea>
+            <textarea name="Message" id="message" cols="30" rows="3" class="form-control form-control-lg" placeholder="Message" required id="messageInput"></textarea>
         </div>
         <div class="row g-1">
             <div class="col-6 d-grid">
-                <button class="btn-dark btn" id="backToPostcodeBtn">Back</button>
+                <button class="btn-dark btn btn-lg" id="backToPostcodeBtn">Back</button>
             </div>
             <div class="col-6 d-grid">
-                <button class="btn btn-danger">Submit</button>
+                <button class="btn btn-danger btn-lg" id="submitBtn">Submit</button>
             </div>
         </div>
     </div>
@@ -57,6 +58,8 @@
     const postcodeBtn = document.getElementById("postcodeBtn")
     const backToPostcodeBtn = document.getElementById("backToPostcodeBtn")
     const contactSection = document.getElementById("contactSection")
+    const submitBtn = document.getElementById("submitBtn")
+
 
     regBtn.addEventListener("click", (e) => {
         e.preventDefault();
@@ -92,5 +95,21 @@
         contactSection.classList.add("d-none")
     })
 
+    submitBtn.addEventListener("click", (e) => {
+        const nameInput = document.getElementById("nameInput")
+        const telInput = document.getElementById("telInput")
+        const emailInput = document.getElementById("emailInput")
+        const messageInput = document.getElementById("messageInput")
+        if (!nameInput.value) {
+            e.preventDefault();
+            alert("Enter your name")
+        } else if (!telInput.value) {
+            e.preventDefault();
+            alert("Enter your phone no.")
+        } else if (!emailInput.value) {
+            e.preventDefault();
+            alert("Enter your email")
+        }
+    })
 
 </script>
