--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -6,7 +6,7 @@ import Map from '../components/Map.astro';
 
 <Layout title="Contact | Newark Mobile Tyres">
 	<main>
-        <div class="bg-dark text-light">
+        <div class="bg-light">
             <div class="container py-3">
                 <h1 class="py-3 text-center">Contact</h1>
             </div>
