--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const title = "Mobile Tyre Fitting, Puncture Repair, Lock Nut Removal & TPMS"
 const bgImg = "url(/img/home-img.png)"
 const heading = "Expert Tyre Service at Your Doorstep"
 const tagline = "Why spend hours at a tyre shop? We'll come to you"
-const mainHeading = "Newark Mobile Tyres"
+const mainHeading = "Newark Tyres"
 ---
 
 <Layout title={`${title} | ${mainHeading}`}>
@@ -24,33 +24,33 @@ const mainHeading = "Newark Mobile Tyres"
             <div class="text-center py-5">
                 <h2>Our Services</h2>
                 <div class="row my-3 g-4">
-                    <div class="col-md-6 col-lg-3">
-                        <Card cardTitle="Mobile Tyre Fitting" cardText="New Tyres Fitted at Home, Work Or Roadside" cardLink="/tyre-services/mobile-tyre-fitting">
+                    <div class="col-md-6 col-lg-4">
+                        <Card cardTitle="Mobile Tyre Fitting" cardText="Tyres Fitted at Home, Work Or Roadside" cardLink="/tyre-services/mobile-tyre-fitting">
                             <i class="fa-duotone fa-truck-fast fs-1 mb-3"></i>
                         </Card>
                     </div>
-                    <div class="col-md-6 col-lg-3">
+                    <div class="col-md-6 col-lg-4">
                         <Card cardTitle="Puncture Repair" cardText="We'll Come To You And Fix Your Flat Tyre" cardLink="/tyre-services/puncture-repair">
                             <i class="fa-duotone fa-tire-flat fs-1 mb-3"></i>
                         </Card>
                     </div>
-                    <div class="col-md-6 col-lg-3">
+                    <div class="col-md-6 col-lg-4">
                         <Card cardTitle="Caravan Tyre Fitting" cardText="Change Your Caravan Tyres The Easy Way" cardLink="/tyre-services/mobile-caravan-tyre-fitting">
                             <i class="fa-duotone fa-caravan-simple fs-1 mb-3"></i>
                         </Card>
                     </div>
-                    <div class="col-md-6 col-lg-3">
+                    <!-- <div class="col-md-6 col-lg-3">
                         <Card cardTitle="24 Hour Tyre Service" cardText="Fast Roadside Tyre Rescue - 24/7" cardLink="/tyre-services/24-hour-emergency-tyre-fitting">
                             <i class="fa-duotone fa-car fs-1 mb-3"></i>
                         </Card>
-                    </div>
+                    </div> -->
                     <div class="col-md-6 col-lg-4">
                         <Card cardTitle="Locking Wheel Nut Removal" cardText="All Car Makes & Models Covered" cardLink="/other-services/locking-wheel-nut-removal">
                             <i class="fa-duotone fa-wrench fs-1 mb-3"></i>
                         </Card>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <Card cardTitle="Tyre Pressure Sensors" cardText="TPMS Diagnostics & Repair" cardLink="/other-services/tpms">
+                        <Card cardTitle="Tyre Pressure Sensors" cardText="TPMS Diagnostics & Repair" cardLink="/other-services/tyre-pressure-sensors">
                             <i class="fa-duotone fa-tire-pressure-warning fs-1 mb-3"></i>
                         </Card>
                     </div>
