--- a/src/components/Coverage.astro
+++ b/src/components/Coverage.astro
@@ -4,7 +4,7 @@ import Map from "./Map.astro";
 
 <div class="container py-5">
     <h2 class="">Areas We Cover</h2>
-    <p class="">Our mobile service is available across many areas of Newark and Nottingham, including:</p>
+    <p class="">Our mobile service is available across many areas of Newark and Sherwood, including:</p>
     <div class="row">
         <div class="col-6 col-lg-3">
             <ul>
