Changed background img url of index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Card from '../components/Card.astro';
 import CTA from '../components/CTA.astro';
 
 const title = "Mobile Tyre Fitting, Puncture Repair, Lock Nut Removal & TPMS"
-const bgImg = "url(/img/home-img.png)"
+const bgImg = "url(/img/mobile-tyre-fitting.jpeg)"
 const heading = "Expert Tyre Service at Your Doorstep"
 const tagline = "Why spend hours at a tyre shop? We'll come to you"
 const mainHeading = "Newark Tyres"
