Redirect to thank you page on main site.

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -1,4 +1,6 @@
 <form action="https://formsubmit.co/spicerdean@icloud.com" method="post" class="mb-5">
+    <input type="hidden" name="_next" value="https://newarktyres.co.uk/thank-you">
+    <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_template" value="box">
     <input type="hidden" name="_subject" value="Quote Submission | Tyre Nation">
     <input type="hidden" name="_autoresponse" value="Thank you for getting in touch with us for a quote. You will receive an email or phone call very soon from one of our team.">
