--- a/src/components/Quote.astro
+++ b/src/components/Quote.astro
@@ -1,6 +1,6 @@
 <form action="https://formsubmit.co/spicerdean@icloud.com" method="post" class="bg-white p-4 border shadow-lg rounded-3">
     <h3 class="text-center mb-3">Get Quote</h3>
-    <input type="hidden" name="_next" value="https://newarktyres.netlify.app/thank-you">
+    <input type="hidden" name="_next" value="https://newarktyres.co.uk/thank-you">
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_template" value="box">
     <input type="hidden" name="_subject" value="Quote Submission | Tyre Nation">
