--- a/src/pages/thank-you.astro
+++ b/src/pages/thank-you.astro
@@ -9,7 +9,7 @@ const title = "Thank You"
     <div class="container py-5 d-flex justify-content-center">
         <div class="text-center bg-success p-5 text-light rounded-3">
             <h1>Success!</h1>
-            <p class="">Your form submitted successfully. We aim to reply to all enquiries within a few hours. <br />If you require a more immediate response, please call 01623 434432</p>
+            <p class="">Your form submitted successfully. We aim to reply to all enquiries within a few hours.</p>
             <a href="/" class="btn btn-light">Return Home</a>
         </div>
     </div>
