Color change and lorem text removed

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,9 @@
 <footer>
-    <div class="bg-dark py-5">
+    <div class="bg-light py-5">
         <div class="container">
-            <div class="row text-light g-lg-5 text-center text-lg-start">
+            <div class="row g-lg-5 text-center text-lg-start">
                 <div class="col-lg-3">
-                    <a href="/" class="navbar-brand fw-bold fs-2 text-light">NEWARK<span class="text-danger">TYRES</span></a>
+                    <a href="/" class="navbar-brand fw-bold fs-2">NEWARK <span class="text-danger">TYRES</span></a>
                     <p class="mb-lg-5">Newark Tyres is a mobile tyre service that covers the Newark and Sherwood area.</p>
                     <!-- <p class="mb-0 text-muted">Tel: 01623 434432</p>
                     <p>Email: contact@tyrenation.co.uk</p> -->
@@ -34,7 +34,7 @@
             </div>
         </div>
     </div>
-    <div class="bg-dark text-muted py-2">
+    <div class="bg-light text-muted py-2">
         <div class="container d-flex justify-content-center small">
             <p class="my-0">&copy; 2023 Newark Tyres</p>
             <span class="mx-4">|</span>
@@ -52,14 +52,14 @@
     }
     li a {
         text-decoration: none;
-        color: white;
+        color: #333;
         cursor: pointer;
     }
     li a:hover {
         color: #dc3545;
     }
     a {
-        color: white;
+        color: #333;
         text-decoration: none;
     }
     a:hover {
