--- a/src/pages/tyre-services/mobile-tyre-fitting.astro
+++ b/src/pages/tyre-services/mobile-tyre-fitting.astro
@@ -14,8 +14,8 @@ const mainHeading = "Mobile Tyre Fitting"
 
 <Layout title={`${title} | Tyre Nation Ltd`}>
 	<Hero heading={heading} tagline={tagline} bgImg={bgImg}/>
-	<Intro mainHeading={mainHeading}>
-		<p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet dolorem consectetur soluta neque perferendis. Accusantium totam laborum magni, vero similique sint repellendus tenetur reprehenderit eveniet velit nam dicta sit voluptatibus.</p>
+	<Intro mainHeading={`${mainHeading} In Newark`}>
+		<p>At Newark Tyres, we understand that getting new tyres can be a hassle, which is why we offer a convenient mobile service that brings our expert technicians right to your doorstep. Whether you need new tyres for your car, van, or 4x4, we have a wide range of options to choose from, and our mobile service makes it easy for you to get the tyres you need wherever you are.</p>
 	</Intro>
 	<Coverage />
 	<CTA />
