--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
     <div class="container">
-      <a class="navbar-brand fw-bold fs-2" href="/">NEWARK TYRES</span></a>
+      <a class="navbar-brand fw-bold fs-2" href="/">NEWARK TYRES</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -39,7 +39,7 @@
         <a href="#" class="btn btn-light fw-bold">Call 01623 434432</a>
       </div> -->
     </div>
-  </nav>
+</nav>
 <!-- 
 <script>
     const navItems = document.querySelectorAll(".nav-link");
