Content added to all service pages

--- a/src/components/Coverage.astro
+++ b/src/components/Coverage.astro
@@ -2,7 +2,7 @@
 import Map from "./Map.astro";
 ---
 
-<div class="container py-5">
+<div class="container my-5">
     <h2 class="">Areas We Cover</h2>
     <p class="">Our mobile service is available across many areas of Newark and Sherwood, including:</p>
     <div class="row">
