--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -5,18 +5,18 @@
     <input type="hidden" name="_subject" value="Quote Submission | Tyre Nation">
     <input type="hidden" name="_autoresponse" value="Thank you for getting in touch with us for a quote. You will receive an email or phone call very soon from one of our team.">
     <div class="row">
-        <div class="col">
+        <div class="col-12 col-md-6">
             <input type="text" class="form-control mb-3" placeholder="Registration" required name="Registration">
             <input type="text" class="form-control mb-3" placeholder="Postcode" required name="Postcode">
             <input type="text" class="form-control mb-3" placeholder="Name" required name="Name">
             <input type="tel" class="form-control mb-3" placeholder="Phone No." required name="Phone">
             <input type="email" class="form-control mb-3" placeholder="E-Mail" required name="Email">
         </div>
-        <div class="col">
+        <div class="col-12 col-md-6">
             <textarea name="Message" id="contactMessage" cols="30" rows="10" class="form-control" placeholder="How can we help you?"></textarea>
         </div>
         <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-danger px-4">Submit</button>
+            <button type="submit" class="btn btn-danger px-4 my-3">Submit</button>
         </div>
     </div>
 </form>
