--- a/src/pages/tyre-services/24-hour-emergency-tyre-fitting.astro
+++ b/src/pages/tyre-services/24-hour-emergency-tyre-fitting.astro
@@ -5,13 +5,10 @@ import Intro from '../../components/Intro.astro';
 const title = "24 Hour Emergency Tyre Fitting"
 const heading = "24 Hour Tyre Service"
 const tagline = "Stuck With A Flat Tyre? Call Us Today"
-const mainHeading = "24Hr Tyre Mobile Service"
+const mainHeading = "24Hr Mobile Tyre Service"
 ---
 
-<Layout title={`${title} | Tyre Nation Ltd`}>
+<Layout title={`${title} | Newark Tyres`}>
     <Hero heading={heading} tagline={tagline}>
     </Hero>
-    <Intro mainHeading={mainHeading}>
-		<p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet dolorem consectetur soluta neque perferendis. Accusantium totam laborum magni, vero similique sint repellendus tenetur reprehenderit eveniet velit nam dicta sit voluptatibus.</p>
-	</Intro>
 </Layout>
