Change to quote component. Using Netlify.

--- a/src/components/Quote.astro
+++ b/src/components/Quote.astro
@@ -1,10 +1,10 @@
-<form action="https://formsubmit.co/spicerdean@icloud.com" method="post" class="bg-white p-4 border shadow-lg rounded-3">
+<form method="post" class="bg-white p-4 border shadow-lg rounded-3" data-netlify="true" name="contact">
     <h3 class="text-center mb-3">Get Quote</h3>
-    <input type="hidden" name="_next" value="https://newarktyres.co.uk/thank-you">
+    <!-- <input type="hidden" name="_next" value="https://newarktyres.co.uk/thank-you">
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_template" value="box">
     <input type="hidden" name="_subject" value="Quote Submission | Newark Tyres">
-    <input type="hidden" name="_autoresponse" value="Thank you for getting in touch with us for a quote. You will receive an email or phone call very soon from one of our team.">
+    <input type="hidden" name="_autoresponse" value="Thank you for getting in touch with us for a quote. You will receive an email or phone call very soon from one of our team."> -->
     <div id="regSection">
         <div class="mb-2">
             <input type="text" class="form-control form-control-lg text-center" placeholder="Enter Reg" id="regInput" name="Registration">
